--- a/index.html
+++ b/index.html
@@ -6,19 +6,46 @@
     <link rel="stylesheet" href="ngunnawal.css">
 </head>
 <body>
-<h1>Welcome To Ngunnawal</h1>
-<div class="grid-container">
-   <div class="full-width">
+<h1> <img src="images/logo.png" alt="" width="80" height="100%">  Welcome To Ngunnawal Country</h1>
 
-    <div>
-    <p>css code h1 {
-        color: blue;
-        text-align: center;
-        }
-        h2{
-        color:gray;
-        }</p>
+<div class="grid-container">
+    <div class="full-width">
+        <!-- this is the banner -->
+
+
+
+        <!-- This is the navbar -->
+
+
+        <div class="navbar">
+
+            <!-- this is the banner -->
+            <style>
+                .main-header {
+                    text-align: center;
+                }
+            </style>
+
+            <header class="full-width" role="banner">
+
+                <img src="images/banner.png" alt="" width="100%" height="280
+">
+
+            </header>
+            <br>
+            <a href="index.html">Home</a>
+            <a href="history.html">History</a>
+            <a href="gallery.html">Gallery</a>
+            <a href="contact_us.html">Contact Us</a>
+            <a href="profile.html">profile</a>
+            <a href="search.html">search</a>
+        </div>
     </div>
 </div>
+
+<p1>
+    welcome to the ngunnawal country website
+
+</p1>
 </body>
 </html>
